tests/errors/operator-missing-operand/main.pa
# A binary operator with no right-hand operand.
def main = 1 +
